# pulumi-vsphere

./: .ci-mgmt.yaml  .gitignore  .gitmodules  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .travis.yml  .upgrade-config.yml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Gometalinter.json  Gopkg.template.toml  Gopkg.toml  Makefile  Makefile.github  README.md  go.mod  go.sum  mise.toml  out.txt  resources.go
.claude/: CLAUDE.md
sdk/python/: Pulumi.yaml  README.md  README.rst  pyproject.toml  setup.py
sdk/python/pulumi_vsphere/: README.md  __init__.py  _inputs.py  _tables.py  alarm.py  compute_cluster.py  compute_cluster_host_group.py  compute_cluster_vm_affinity_rule.py  compute_cluster_vm_anti_affinity_rule.py  compute_cluster_vm_dependency_rule.py  compute_cluster_vm_group.py  compute_cluster_vm_host_rule.py  configuration_profile.py  content_library.py  content_library_item.py  custom_attribute.py  datacenter.py  datastore_cluster.py  datastore_cluster_vm_anti_affinity_rule.py  distributed_port_group.py  distributed_virtual_switch.py  distributed_virtual_switch_pvlan_mapping.py  dpm_host_override.py  drs_vm_override.py  entity_permissions.py  file.py  folder.py  get_alarm.py  get_compute_cluster.py  get_compute_cluster_host_group.py  get_configuration_profile.py  get_content_library.py  get_content_library_item.py  get_custom_attribute.py  get_datacenter.py  get_datastore.py  get_datastore_cluster.py  get_datastore_stats.py  get_distributed_virtual_switch.py  get_dynamic.py  (+50 more)
sdk/python/pulumi_vsphere/config/: README.md  __init__.pyi  vars.py
(+1148 files in other folders)
